Wed Dec 23 19:14:42 UTC 2009  Johnny Willemsen  <jwillemsen {at} remedy.nl>

        * orbsvcs/tests/Bug_2248_Regression/client.cpp:
          Fixed QNX compile problem

Wed Dec 23 19:07:38 UTC 2009  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_ami_pre_proc.cpp:

          In implied IDL generation for AMI, added a copy of
          exception list to AMI-releated operation nodes corresponding
          to attributes the same as they already are for other
          operation nodes. Thanks to Johnny Willemsen <jwillemsen@remedy.nl>
          for reporting the problem and creating a regression test.

Wed Dec 23 18:48:31 UTC 2009  Yan Dai  <dai_y@ociweb.com>

        * TAO_IDL/be/be_visitor_valuebox/valuebox_cs.cpp:
        * TAO_IDL/be/be_visitor_valuetype/valuetype_cs.cpp:

          Made bool changes according to ACE-guidelines.html.

Wed Dec 23 15:47:02 UTC 2009  Jeff Parsons  <j.parsons@vanderbilt.edu>

        * TAO_IDL/fe/idl.yy:
        * TAO_IDL/fe/y.tab.cpp:

          Reverted a change to the 'state_member' production rule that
          was causing the public/private qualifier to be lost in
          valuetypes and eventtypes.

        * TAO_IDL/include/ast_field.h:

          Removed extra spaces.

Wed Dec 23 11:56:42 UTC 2009  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * tests/CodeSets/simple/client.cpp:
        * tests/CodeSets/simple/server.cpp:
        * tests/CodeSets/simple/run_test.pl:
        * tests/Bug_3766_Regression/client.cpp:
        * tests/Bug_3766_Regression/server.cpp:
        * tests/Bug_3766_Regression/run_test.pl:
          Changed the tests so they accept IORs from command line.

        * tests/Bug_3790_Regression/server2.cpp:
          Fixed compile error on wchar builds.

        * bin/tao_orb_tests.lst:
          Disabled a test for bug#3542 on static builds.

Wed Dec 23 09:31:42 UTC 2009  Johnny Willemsen  <jwillemsen {at} remedy.nl>
